# riti

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  README.md  cbindgen.toml
.github/workflows/: main.yml
data/: Probhat.json  autocorrect.json
include/: libriti.h  riti.h
riti.xcodeproj/: project.pbxproj
src/: config.rs  context.rs  data.rs  database.rs  ffi.rs  keycodes.rs  lib.rs  loader.rs  phonetic_regex.rs  regexparser.rs  settings.rs  suggestion.rs  utility.rs
src/fixed/: chars.rs  database.rs  layout.rs  method.rs  mod.rs  parser.rs  search.rs
src/phonetic/: autocorrect.rs  database.rs  method.rs  mod.rs  regex.rs  suggestion.rs
src/phonetic/regex/: mod.rs  patterns.rs  regex.rs
