[package]
name = "riti"
version = "0.1.0"
authors = ["Muhammad Mominul Huque <mominul2082@gmail.com>"]
license = "MPL-2.0"
edition = "2021"
rust-version = "1.63.0"

[lib]
crate-type = ["lib", "staticlib"]

[features]
bench = []

[profile.release]
codegen-units = 1

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
emojicon = { version = "0.5", features = ["custom"] }
serde_json = "=1.0.108"
regex = "~1.9" # For maintaining MSRV
stringplus = "0.1"
edit-distance = "=2.1.0"
okkhor = "0.8"
poriborton = "0.2"
upodesh = "0.4"

[dev-dependencies]
rustversion = "1.0"
pretty_assertions = "1.4"
